--- a/Report/Axolotl/MAO.tex
+++ b/Report/Axolotl/MAO.tex
@@ -110,6 +110,36 @@ Los axolotes son un tema de investigación por biólogos dado a su capacidad de 
  \end{algorithm}
  
 
+\section{Ventajas}
 
+La técnica \textit{Mexican Axolotl Optimization} (\textit{MAO}) presenta varias ventajas importantes:
+
+\begin{itemize}
+	\item \textbf{Inspiración biológica robusta:} Su diseño se basa en procesos naturales probados, como la regeneración y adaptación, lo que permite un enfoque balanceado entre exploración y explotación.
+	\item \textbf{Capacidad de adaptación dinámica:} Gracias a sus parámetros como la probabilidad de daño y sanación, el algoritmo puede adaptarse a distintos escenarios y escapar de óptimos locales.
+	\item \textbf{Manejo efectivo de poblaciones heterogéneas:} La diferenciación entre machos y hembras y la cruza genómica permiten mantener diversidad genética, lo que mejora la búsqueda global.
+	\item \textbf{Versatilidad:} Puede ser aplicado a problemas de optimización continua, compleja y de alta dimensión.
+\end{itemize}
+
+\section{Desventajas}
+
+Sin embargo, \textit{MAO} también presenta algunas limitaciones:
+
+\begin{itemize}
+	\item \textbf{Sensibilidad a la configuración:} La selección incorrecta de metaparámetros puede degradar significativamente el rendimiento del algoritmo.
+	\item \textbf{Costo computacional:} El manejo de poblaciones grandes y múltiples iteraciones puede resultar en tiempos de cómputo elevados, especialmente para problemas complejos.
+	\item \textbf{Falta de garantías teóricas:} Como muchas heurísticas bioinspiradas, no ofrece garantías matemáticas de convergencia al óptimo global.
+	\item \textbf{Implementación compleja:} La modelación de procesos biológicos complejos puede dificultar la implementación y ajuste del algoritmo para usuarios sin experiencia.
+\end{itemize}
+
+\section{Aplicaciones}
+
+El algoritmo \textit{Mexican Axolotl Optimization} ha demostrado ser útil en diversas áreas de optimización, tales como:
+
+\begin{itemize}
+	\item Optimización de funciones continuas y no lineales. Resuelve problemas complejos con múltiples variables y restricciones.
+	\item Selección de parámetros óptimos en modelos de machine learning.
+	\item Inspiración para simulaciones en biología computacional y estudios de dinámica poblacional.
+\end{itemize}
  
  
