--- a/Report/Axolotl/referencias.bib
+++ b/Report/Axolotl/referencias.bib
@@ -1,7 +1,46 @@
 @online{leyenda,
-	Michin Puebla ES. “La leyenda del axolote mexicano, un dios que se negó a morir – Acuario Michin Puebla”. Acuario Michin Puebla. Accedido el 5 de junio de 2025. [En línea]. Disponible: https://puebla-es.acuariomichin.com/la-leyenda-del-axolote-mexicano-un-dios-que-se-nego-a-morir/
+	author       = {{Acuario Michin Puebla}},
+	title        = {La leyenda del axolote mexicano, un dios que se negó a morir},
+	year         = {2025},
+	url          = {https://puebla-es.acuariomichin.com/la-leyenda-del-axolote-mexicano-un-dios-que-se-nego-a-morir/},
+	note         = {Accedido el 5 de junio de 2025},
+	organization = {Acuario Michin Puebla}
 }
 
 @online{axolote,
-National Geographic. “Axolote mexicano, datos esenciales de un animal Ãºnico | National Geographic”. National Geographic EspaÃ±a | National Geographic. Accedido el 5 de junio de 2025. [En línea]. Disponible: https://www.nationalgeographic.es/animales/axolote-mexicano
+	author       = {{National Geographic España}},
+	title        = {Axolote mexicano, datos esenciales de un animal único},
+	year         = {2025},
+	url          = {https://www.nationalgeographic.es/animales/axolote-mexicano},
+	note         = {Accedido el 5 de junio de 2025},
+	organization = {National Geographic España}
+}
+
+@misc{cec,
+	author       = {Y. S. Ong and P. N. Suganthan and T. Weise},
+	title        = {Definitions of CEC2017 Benchmark Suite},
+	year         = {2017},
+	note         = {Accedido el 26 de marzo de 2025},
+	url          = {ruta/local/o/enlace}
+}
+
+@techreport{plot,
+	author       = {N. H. Awad and M. Z. Ali and P. N. Suganthan and J. J. Liang and B. Y. Qu},
+	title        = {Problem Definitions and Evaluation Criteria for the CEC 2017 Special Session and Competition on Single Objective Bound Constrained Real-Parameter Numerical Optimization},
+	year         = {2016},
+	note         = {Accedido el 26 de marzo de 2025}
+}
+
+@article{mao,
+	author       = {Y. Villuendas-Rey and J. L. Velázquez-Rodríguez and M. D. Alanis-Tamez and M.-A. Moreno-Ibarra and C. Yáñez-Márquez},
+	title        = {Mexican Axolotl Optimization: A Novel Bioinspired Heuristic},
+	journal      = {Mathematics},
+	volume       = {9},
+	number       = {7},
+	pages        = {781},
+	month        = apr,
+	year         = {2021},
+	doi          = {10.3390/math9070781},
+	note         = {Accedido el 8 de junio de 2025},
+	url          = {https://doi.org/10.3390/math9070781}
 }
